COMP4711 SET 4R
Group #19
Jason Sekhon(Captain), Eric Lin(Mate), Morris Arroyo(Mate)

-----------------------

* Added changelog and setup project files