@@ -4,7 +4,7 @@ defined('BASEPATH') OR exit('No direct script access allowed');
 // the menu basics (text navbar)
 $config['menu_choices'] = array(
     'menudata' => array(
-        array('name' => 'Alpha', 'link' => '#'),
+        array('name' => 'Alpha', 'link' => '/able'),
         array('name' => 'Bravo', 'link' => '#'),
         array('name' => 'Charlie', 'link' => '#'),
         array('name' => 'Delta', 'link' => '#'),
