@@ -4,4 +4,6 @@ Jason Sekhon(Captain), Eric Lin(Mate), Morris Arroyo(Mate)
 
 -----------------------
 
+* Completed alpha issue. Added able controller and updated menubar link for Alpha to "/able"
+
 * Added changelog and setup project files
